feat: enhance Modbus adapter to handle BAD quality data points and update configuration for protocol adapters

--- a/agent/package.json
+++ b/agent/package.json
@@ -5,8 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc && npm run copy:migrations && npm run build:adapters",
-    "build:adapters": "cd adapters && tsc",
+    "build": "tsc && npm run copy:migrations",
     "copy:migrations": "node -e \"require('fs').cpSync('src/migrations', 'dist/migrations', {recursive: true})\"",
     "watch": "tsc --watch",
     "clean": "rimraf dist && rimraf protocol-adapters/dist",
