feat: Implement device logs partitioning and retention management
- Changed SQL query in DeviceLogsModel to order logs by timestamp in ascending order.
- Updated CORS methods in index.ts to include PATCH.
- Refactored image scanning route to simplify response and remove unused variables.
- Enhanced ApplicationsCard component to fetch available Docker images from the API and display them in a dropdown.
- Improved log rendering in ContainerLogsCard to dynamically determine log levels and colors based on message content.
- Added migration script for partitioning device_logs table by month and implementing retention policies.
- Created housekeeper tasks for managing device logs partitioning and retention cleanup.
- Documented log optimization strategies, including sampling, partitioning, and retention in the optimization guide.

--- a/api/.env.example
+++ b/api/.env.example
@@ -33,3 +33,10 @@ BILLING_API_URL=http://localhost:3100
 CUSTOMER_ID=cust_your_customer_id_here
 INSTANCE_ID=production-1
 
+# Log Retention Configuration
+LOG_RETENTION_ENABLED=true
+LOG_RETENTION_DAYS=30
+LOG_RETENTION_CHECK_HOURS=24
+LOG_PARTITION_CHECK_HOURS=720
+LOG_COMPRESSION=true
+
