--- a/api/package.json
+++ b/api/package.json
@@ -38,6 +38,7 @@
     "dockerode": "^4.0.0",
     "express": "^4.18.2",
     "express-rate-limit": "^8.1.0",
+    "ioredis": "^5.3.2",
     "is-utf8": "^0.2.1",
     "jsonwebtoken": "^9.0.2",
     "mqtt": "^5.14.1",
