feat: Convert postoffice to TypeScript with clean architecture
- Remove legacy JavaScript files (index.js, templates/*.js)
- Add TypeScript implementation with dependency injection
- Create comprehensive type system (types.ts)
- Add email content sanitization utilities (sanitizer.ts)
- Convert email layout to TypeScript with Iotistic branding
- Migrate email templates to TypeScript with handlebars
- Add package.json with proper dependencies
- Create usage example (example.ts)
- Update .gitignore to exclude modbus-adapter/

Benefits:
- Clean architecture with dependency injection
- Type safety throughout the codebase
- Testable code with injectable dependencies
- Modern async/await patterns
- Better error handling
- Modular design

--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -22,35 +22,30 @@ log_type debug
 # Load Go-Auth plugin
 auth_plugin /mosquitto/go-auth.so
 
-# Backend configuration
-auth_opt_backends postgres
+# Backend configuration - HTTP authentication
+# Uses API endpoints on port 4002 for authentication (not 3002)
+auth_opt_backends http
 
-# PostgreSQL connection settings
-auth_opt_pg_host postgres
-auth_opt_pg_port 5432
-auth_opt_pg_dbname iotistic
-auth_opt_pg_user postgres
-auth_opt_pg_password postgres
-auth_opt_pg_sslmode disable
+# HTTP backend settings
+# host.docker.internal allows container to reach host machine (Docker Desktop feature)
+auth_opt_http_host host.docker.internal
+auth_opt_http_port 4002
+auth_opt_http_getuser_uri /mosquitto-auth/user
+auth_opt_http_superuser_uri /mosquitto-auth/superuser
+auth_opt_http_aclcheck_uri /mosquitto-auth/acl
 
-# User authentication query
-# Returns password_hash for the given username
-auth_opt_pg_userquery SELECT password_hash FROM mqtt_users WHERE username = $1 AND is_active = true LIMIT 1
+# HTTP request configuration
+auth_opt_http_method POST
+auth_opt_http_request_type json
+auth_opt_http_response_mode status
 
-# ACL check query for mosquitto-go-auth with PostgreSQL
-# Parameters passed by mosquitto-go-auth: $1 = username, $2 = topic, $3 = clientid, $4 = acc
-# BUT: PostgreSQL backend only passes $1 (username) and $2 (acc) 
-# The plugin will pattern-match returned topics against the requested topic
-# access column values: 1=read, 2=write, 3=read+write, 4=subscribe
-auth_opt_pg_aclquery SELECT topic FROM mqtt_acls WHERE username = $1 AND (access & $2) != 0
+# HTTP timeout
+auth_opt_http_timeout 5
 
-# Superuser query (optional - returns 1 if user is superuser)
-auth_opt_pg_superquery SELECT COUNT(*) FROM mqtt_users WHERE username = $1 AND is_superuser = true
-
-# Password hashing configuration for mosquitto-go-auth
+# Password hashing configuration
+# Note: Password validation is done by the API using bcrypt
 auth_opt_hasher bcrypt
 auth_opt_hasher_cost 10
-auth_opt_hasher_salt_size 16
 
 # Cache settings (optional - improves performance)
 # auth_opt_cache true
