--- a/vpn-server/package.json
+++ b/vpn-server/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.8.0",
+    "@types/node-forge": "^1.3.11",
     "@types/pg": "^8.10.7",
     "@types/uuid": "^9.0.6",
     "@types/bcrypt": "^5.0.2",
