Fix VPN server PKI initialization (non-interactive mode)
- Add --batch flag to all easyrsa commands for non-interactive operation
- Fix server.conf user/group (openvpn instead of nobody/nogroup for Alpine)
- Add enhanced logging to debug OpenVPN startup issues
- PKI initialization now works perfectly
- OpenVPN startup still needs debugging (crashes immediately)

--- a/vpn-server/config/server.conf
+++ b/vpn-server/config/server.conf
@@ -44,8 +44,9 @@ comp-lzo adaptive
 push "comp-lzo adaptive"
 
 # User and group (for security)
-user nobody
-group nogroup
+# Run as openvpn user (Alpine Linux doesn't have nogroup)
+user openvpn
+group openvpn
 
 # Logging
 status /var/log/openvpn/openvpn-status.log 10
