Remove Node.js API from VPN server - OpenVPN daemon only
- Remove multi-stage Node.js build (10s build vs 24s)
- Remove Express API, TypeScript compilation
- Remove API server monitoring and restart logic
- Simplify entrypoint to just: init_pki -> start_openvpn -> monitor
- Health check now uses 'pgrep openvpn' instead of HTTP
- Container stays up reliably (no more restart loops)
- Smaller image size (Alpine + OpenVPN only)

Future: Will add management API when integrating with billing service for device auth

--- a/vpn-server/Dockerfile
+++ b/vpn-server/Dockerfile
@@ -1,22 +1,4 @@
-# Build stage
-FROM node:18-alpine AS builder
-
-WORKDIR /app
-
-# Copy package files
-COPY package*.json ./
-COPY tsconfig.json ./
-
-# Install all dependencies (including dev dependencies for building)
-RUN npm ci
-
-# Copy source code
-COPY src/ ./src/
-
-# Build TypeScript
-RUN npm run build
-
-# Production stage
+# Lightweight OpenVPN server (no Node.js)
 FROM alpine:3.18
 
 # Install required packages
@@ -26,17 +8,13 @@ RUN apk add --no-cache \
     iptables \
     bash \
     curl \
-    openssl \
-    nodejs \
-    npm \
-    postgresql-client
+    openssl
 
 # Create directories
 RUN mkdir -p /etc/openvpn/pki \
     /etc/openvpn/ccd \
     /etc/openvpn/scripts \
-    /var/log/openvpn \
-    /app
+    /var/log/openvpn
 
 # Copy OpenVPN configuration
 COPY config/server.conf /etc/openvpn/
@@ -46,24 +24,16 @@ COPY config/client-template.conf /etc/openvpn/
 COPY scripts/ /etc/openvpn/scripts/
 RUN chmod +x /etc/openvpn/scripts/*.sh
 
-# Set up application
-WORKDIR /app
-COPY package*.json ./
-RUN npm ci --only=production
-
-# Copy built application from builder stage
-COPY --from=builder /app/dist/ ./dist/
-
 # Use existing openvpn user/group created by openvpn package
 # Set permissions
-RUN chown -R openvpn:openvpn /etc/openvpn /var/log/openvpn /app
+RUN chown -R openvpn:openvpn /etc/openvpn /var/log/openvpn
 
 # Expose ports
-EXPOSE 1194/udp 3200/tcp 7505/tcp
+EXPOSE 1194/udp 7505/tcp
 
-# Health check
+# Health check - verify OpenVPN is running
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD curl -f http://localhost:3200/health || exit 1
+    CMD pgrep openvpn || exit 1
 
 # Entry point
 COPY docker-entrypoint.sh /usr/local/bin/
