--- a/vpn-server/config/server.conf
+++ b/vpn-server/config/server.conf
@@ -81,8 +81,14 @@ max-clients 1000
 # push "route-ipv6 fd00:10:8::/64"
 
 # Custom routes for Iotistic platform
-# Push routes to client for accessing cloud services
-push "route 10.244.0.0 255.255.0.0"  # K8s cluster network
+# Push routes to clients for accessing Kubernetes services
+# Note: These will be dynamically set via environment variables in K8s deployment
+# K8s service CIDR (typically 10.96.0.0/12 or 10.0.0.0/16 depending on cluster)
+# This route tells VPN clients how to reach Mosquitto ClusterIP service
+push "route 10.96.0.0 255.240.0.0"  # K8s service network (ClusterIP range)
+push "route 10.244.0.0 255.255.0.0"  # K8s pod network (optional - for direct pod access)
+
+# For Docker Compose local dev
 push "route 172.17.0.0 255.255.0.0"  # Docker bridge network
 
 # Security enhancements
