--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -136,6 +136,7 @@ services:
             - "${VPN_SERVER_PORT:-1194}:1194/udp"  # OpenVPN
             - "${VPN_API_PORT:-3200}:3200/tcp"      # API Server
             - "${VPN_MGMT_PORT:-7505}:7505/tcp"     # Management interface
+            - "${VPN_CA_PORT:-8080}:8080/tcp"       # CA Certificate Server
         volumes:
             - vpn-config:/etc/openvpn
             - vpn-logs:/var/log/openvpn
